fixing aria-label & links ultimate-rafting

--- a/ultimate-rafting.html
+++ b/ultimate-rafting.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjoa Escape | Ultimate Rafting Sjoa</title>
-    <link rel="icon" href="/imagenes/logo-blue.png" type="image/gif">
-    <link href="/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
+    <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ef942ef12.js" crossorigin="anonymous"></script>
 </head>
@@ -14,21 +14,21 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
-      <div class="logo">Sjoa Escape</div>
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <h1 class="logo">Sjoa Escape</h1>
       <!-- USING CHECKBOX HACK -->
       <input type="checkbox" id="checkbox_toggle" />
       <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENU -->
       <ul class="nav-links menu">
         <!-- NAVIGATION MENUS -->
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/rafting-sjoa.html">Rafting Sjoa</a></li>
-          <li><a href="/activities.html">Activities</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+          <li><a href="activities.html">Activities</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="accebility">
-        <a href="#" class="language"><i class="fa fa-language"></i></a>
+        <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
       </div>
     </nav>
 <!-- ACTIVITY DESCRIPTION -->
@@ -46,7 +46,7 @@
     </div>
     <br>
     <div class="container-detail">
-        <img src="/imagenes/ultimate-rafting.jpg" alt="Rafting in Sjoa" width="150px">
+        <img src="imagenes/ultimate-rafting.jpg" alt="Rafting in Sjoa">
         <div class="ban-incluides">
             <h3>It incluides</h3>
             <ul>
@@ -122,11 +122,11 @@
                 <h2>Connect</h2>
             </div>
             <div class="col-12 social-icon">
-                <a href="https://www.facebook.com/Sjoaescape"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/sjoaescape"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/Sjoaescape" aria-label="Link to Sjoa Escape Facebook page"><i class="fab fa-facebook"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Twitter page"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/sjoaescape" aria-label="Link to Sjoa Escape Instragram page"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Tik Tok page"><i class="fab fa-tiktok"></i></a>
+                <a href="#" aria-label="Link to Sjoa Escape Youtube channel"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </div>
@@ -136,7 +136,7 @@
     <div class="container-fluid">
       <!-- LOGO & INFO -->
       <div class="footer-logo">
-        <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
+        <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
         <h5>Sjoa Escape</h5>
       </div>
       <address class="footer-contact">
