fixing img rafting-sjoa page and css activities imagenes

--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -62,7 +62,7 @@
   </div>
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-sjoarafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
       <h3><a href="sjoa-classic.html">Sjoa Classic</a></h3>
@@ -85,10 +85,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-familyrafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-familyrafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/family-rafting.html">Family Rafting</a></h3>
+      <h3><a href="family-rafting.html">Family Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -98,7 +98,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/family-rafting.html">Book Now!</a></li>
+        <li><a href="family-rafting.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -107,7 +107,7 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-asengrafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-asengrafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
       <h3><a href="activities/rafting-aseng.html">Rafting Åseng</a></h3>
@@ -130,7 +130,7 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-ultimaterafting.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-ultimaterafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
       <h3><a href="activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
