--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -110,7 +110,7 @@
       <img src="imagenes/banner-asengrafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/rafting-aseng.html">Rafting Åseng</a></h3>
+      <h3><a href="rafting-aseng.html">Rafting Åseng</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -121,7 +121,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/rafting-aseng.html">Book Now!</a></li>
+        <li><a href="rafting-aseng.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>1250 NOK</b></li>
       </ul>
@@ -133,7 +133,7 @@
       <img src="imagenes/banner-ultimaterafting.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
+      <h3><a href="ultimate-rafting.html">Ultimate Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -143,7 +143,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/ultimate-rafting.html">Book Now!</a></li>
+        <li><a href="ultimate-rafting.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>1450 NOK</b></li>
       </ul>
