--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <img src="imagenes/banner-familyrafting.jpg" alt="Family Rafting in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/family-rafting.html">Family Rafting</a></h3>
+      <h3><a href="family-rafting.html">Family Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -116,7 +116,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/family-rafting.html">Read more</a></li>
+        <li><a href="family-rafting.html">Read more</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -128,7 +128,7 @@
       <img src="imagenes/banner-asengrafting.jpg" alt="Rafting Åseng" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/rafting-aseng.html">Rafting Åseng</a></h3>
+      <h3><a href="rafting-aseng.html">Rafting Åseng</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -139,7 +139,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/rafting-aseng.html">Read more</a></li>
+        <li><a href="rafting-aseng.html">Read more</a></li>
         <li>Full day</li>
         <li><b>1250 NOK</b></li>
       </ul>
@@ -151,7 +151,7 @@
       <img src="imagenes/banner-ultimaterafting.jpg" alt="Ultimate Rafting Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/ultimate-rafting.html">Ultimate Rafting</a></h3>
+      <h3><a href="ultimate-rafting.html">Ultimate Rafting</a></h3>
     </div>
     <hr class="hr-index">
     <div class="ban-description">
@@ -161,7 +161,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/ultimate-rafting.html">Read more</a></li>
+        <li><a href="ultimate-rafting.html">Read more</a></li>
         <li>Full day</li>
         <li><b>1450 NOK</b></li>
       </ul>
@@ -178,7 +178,7 @@
       <img src="imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/riverboard-sjoa.html">Riverboard Sjoa</a></h3>
+      <h3><a href="riverboard-sjoa.html">Riverboard Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>Total adventure!<br>
@@ -187,7 +187,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/riverboard-sjoa.html">Book Now!</a></li>
+        <li><a href="riverboard-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -199,7 +199,7 @@
       <img src="imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/dookies-sjoa.html">Dookie Sjoa</a></h3>
+      <h3><a href="dookies-sjoa.html">Dookie Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>A unique adventure in Sjoa!<br>
@@ -209,7 +209,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/dookies-sjoa.html">Book Now!</a></li>
+        <li><a href="dookies-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -221,7 +221,7 @@
       <img src="imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa" width="100%">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/klattrapark.html">Klättrapark</a></h3>
+      <h3><a href="klattrapark.html">Klättrapark</a></h3>
     </div>
     <div class="ban-description">
       <p>Ideal for the whole family!<br>
@@ -231,7 +231,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/klattrapark.html">Book Now!</a></li>
+        <li><a href="klattrapark.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>250 NOK</b></li>
       </ul>
