logo img family-rafting

--- a/family-rafting.html
+++ b/family-rafting.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
       <h1 class="logo">Sjoa Escape</h1>
       <!-- USING CHECKBOX HACK -->
       <input type="checkbox" id="checkbox_toggle" />
