fixed links, logo and css activities page

--- a/activities.html
+++ b/activities.html
@@ -38,7 +38,7 @@
     <h1>Activities in Sjoa</h1>
   </div>
   <articule class="raft-intro">
-    <img src="imagenes/top-actividades.jpg" alt="Rafting Sjoa Gulfstream rapid" width="150px">
+    <img src="imagenes/top-actividades.jpg" alt="Rafting Sjoa Gulfstream rapid">
     <p>No solo hay Rafting en Sjoa!<br>
     Hay otras actividades, tanto en el río como en la montaña y el entre arboles. Entre estas actividades esta Riverboard en el río Sjoa, dookie o kayak inflable para desncenso de río, ya se en individual o en pareja. pero tambien hay cursos de kayak de río, desde nivel principiantes hasta, intermedios y avanzados, asi como de kayak de seguridad.<br>
     Estas actividades pueden complementar tu visita al valle de Sjoa, además de un recorrido de Rafting, ya sea rafting en Sjoa o rafting familiar.<br>
@@ -54,10 +54,10 @@
   </div>
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa" width="100%">
+      <img src="imagenes/banner-riverboard.jpg" alt="Riverboard in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/riverboard-sjoa.html">Riverboard Sjoa</a></h3>
+      <h3><a href="riverboard-sjoa.html">Riverboard Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>Total adventure!<br>
@@ -66,7 +66,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/riverboard-sjoa.html">Book Now!</a></li>
+        <li><a href="riverboard-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -75,10 +75,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa" width="100%">
+      <img src="imagenes/banner-dookies.jpg" alt="Inflatable kayak in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/dookies-sjoa.html">Dookie Sjoa</a></h3>
+      <h3><a href="dookies-sjoa.html">Dookie Sjoa</a></h3>
     </div>
     <div class="ban-description">
       <p>A unique adventure in Sjoa!<br>
@@ -88,7 +88,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/dookies-sjoa.html">Book Now!</a></li>
+        <li><a href="dookies-sjoa.html">Book Now!</a></li>
         <li>Half day</li>
         <li><b>750 NOK</b></li>
       </ul>
@@ -97,10 +97,10 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa" width="100%">
+      <img src="imagenes/banner-kl{ttrapark.jpg" alt="Klättrapark in Sjoa">
     </div>
     <div class="ban-activity">
-      <h3><a href="activities/klattrapark.html">Klättrapark</a></h3>
+      <h3><a href="klattrapark.html">Klättrapark</a></h3>
     </div>
     <div class="ban-description">
       <p>Ideal for the whole family!<br>
@@ -110,7 +110,7 @@
     </div>
     <div class="list-option">
       <ul class="links-activity">
-        <li><a href="activities/klattrapark.html">Book Now!</a></li>
+        <li><a href="klattrapark.html">Book Now!</a></li>
         <li>Full day</li>
         <li><b>250 NOK</b></li>
       </ul>
@@ -119,7 +119,7 @@
   <br class="br-activity">
   <div class="container-box">
     <div class="ban-img">
-      <img src="imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa" width="100%">
+      <img src="imagenes/banner-viaferrata.jpg" alt="Rafting in Sjoa">
     </div>
     <div class="ban-activity">
       <h3><a href="via-ferrata.html">Via Ferrata Sjoa</a></h3>
@@ -160,7 +160,7 @@
   <div class="container-fluid">
     <!-- LOGO & INFO -->
     <div class="footer-logo">
-      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a>
       <h5>Sjoa Escape</h5>
     </div>
     <address class="footer-contact">
