fixed logo and links rafting-aseng page

--- a/rafting-aseng.html
+++ b/rafting-aseng.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
       <!-- LOGO -->
-      <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
+      <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
       <h1 class="logo">Sjoa Escape</h1>
       <!-- USING CHECKBOX HACK -->
       <input type="checkbox" id="checkbox_toggle" />
@@ -45,7 +45,7 @@
     </div>
     <br>
     <div class="container-detail">
-        <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa" width="150px">
+        <img src="imagenes/Sjoa-WashingMachine.jpg" alt="Rafting in Sjoa">
         <div class="ban-incluides">
             <h3>It incluides</h3>
             <ul>
@@ -135,7 +135,7 @@
     <div class="container-fluid">
       <!-- LOGO & INFO -->
       <div class="footer-logo">
-        <a href="/index.html"><img src="/imagenes/logo-blue.png" alt="Logo Sjoa Escape" width="58"></a>  
+        <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a>  
         <h5>Sjoa Escape</h5>
       </div>
       <address class="footer-contact">
