fixing slide imagenes index page

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-        <img src="imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine">
+        <img class="img-slide" src="imagenes/slide-washingmachine.jpg" alt="Rafting Sjoa Washing Machine">
       <div class="text">Rafting Sjoa</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
-        <img src="imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa">
+        <img class="img-slide" src="imagenes/slide-familyrafting.jpg" alt="Family Rafting Sjoa">
       <div class="text">Family Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">3 / 5</div>
-        <img src="imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa">
+        <img class="img-slide" src="imagenes/slide-flipinsjoa.jpg" alt="Ultimate Rafting in Sjoa">
       <div class="text">Ultimate Rafting</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src="imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng">
+      <img class="img-slide" src="imagenes/slide-raftingaseng.jpg" alt="Rafting Åseng">
       <div class="text">Rafting Åseng</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
-        <img src="imagenes/slide-happyfaces.jpg" alt="Happy Rafting">
+        <img class="img-slide" src="imagenes/slide-happyfaces.jpg" alt="Happy Rafting">
       <div class="text">Rafting in Sjoa</div>
     </div>
     <!-- prev-next -->
