fixing drop menu rafting-sjoa page

--- a/rafting-sjoa.html
+++ b/rafting-sjoa.html
@@ -16,16 +16,19 @@
     <!-- LOGO -->
     <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <h1 class="logo">Sjoa Escape</h1>
-     <!-- USING CHECKBOX HACK -->
-     <input type="checkbox" id="checkbox_toggle" />
-     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-    <!-- NAVIGATION MENU -->
-    <ul class="nav-links menu">
+    <ul class="nav-links">
+      <!-- USING CHECKBOX HACK -->
+      <input type="checkbox" id="checkbox_toggle" />
+      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENUS -->
+      <div class="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="rafting-sjoa.html"  class="active">Rafting Sjoa</a></li>
+        <li>
+          <a href="rafting-sjoa.html"  class="active">Rafting Sjoa</a>
+        </li>
         <li><a href="activities.html">Activities</a></li>
         <li><a href="contact.html">Contact</a></li>
+      </div>
     </ul>
     <div class="accebility">
       <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
