--- a/activities.html
+++ b/activities.html
@@ -16,16 +16,20 @@
     <!-- LOGO -->
     <a href="index.html"><img src="imagenes/logo-blue.png" alt="Logo Sjoa Escape"></a> 
     <div class="logo">Sjoa Escape</div>
-    <!-- USING CHECKBOX HACK -->
-    <input type="checkbox" id="checkbox_toggle" />
-    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
     <!-- NAVIGATION MENU -->
-    <ul class="nav-links menu">
+    <ul class="nav-links">
+      <!-- USING CHECKBOX HACK -->
+      <input type="checkbox" id="checkbox_toggle" />
+      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENUS -->
+      <div class="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
+        <li>
+          <a href="rafting-sjoa.html">Rafting Sjoa</a>
+        </li>
         <li><a href="activities.html" class="active">Activities</a></li>
         <li><a href="contact.html">Contact</a></li>
+      </div>
     </ul>
     <div class="accebility">
       <a href="#" class="language" aria-label="Activate the accessibility mode of the web page"><i class="fa fa-language"></i></a>
