--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,7 @@
         <!-- NAVIGATION MENUS -->
         <div class="menu">
           <li><a href="index.html">Home</a></li>
-          <li>
-            <a href="rafting-sjoa.html">Rafting Sjoa</a>
-          </li>
+          <li><a href="rafting-sjoa.html">Rafting Sjoa</a></li>
           <li><a href="activities.html">Activities</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </div>
