change page´s contact name from activities to contact

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sjoa Escape | Activities</title>
+    <title>Sjoa Escape | Contact</title>
     <link rel="icon" href="imagenes/logo-blue.png" type="image/gif">
     <link href="CSS/style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
