Fixing navbar with dropdwon in all pages

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <div class="logo">Sjoa Escape</div>
     <!-- NAVIGATION MENU -->
     <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Rafting
             </button>
@@ -40,7 +40,7 @@
                 <a href="via-ferrata.html">Via Ferrata</a>
             </div>
         </div> 
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </div>
     <div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
