removing class-active in dookies page

--- a/dookies-sjoa.html
+++ b/dookies-sjoa.html
@@ -18,7 +18,7 @@
       <h1 class="logo">Sjoa Escape</h1>
       <!-- NAVIGATION MENU -->
     <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn">Rafting
             </button>
